--- a/app/views/products/show.haml
+++ b/app/views/products/show.haml
@@ -1,3 +1,3 @@
-%h1= @current_object.name
+%h2= @current_object.name
 
-= link_to "Add to basket"
+= link_to "Add to basket", basket_path(:id => @current_object.id), :method => :put 
